compress sample file

--- a/02.data-pivot-even.ipynb
+++ b/02.data-pivot-even.ipynb
@@ -22,7 +22,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "con = duckdb.connect(\"file.db\")"
+    "# con = duckdb.connect(\"file.db\")\n",
+    "con = duckdb.connect()"
    ]
   },
   {
@@ -346,6 +347,56 @@
     "sql = \"\"\"\n",
     "COPY (select * from device_iot_01) TO 'device_iot_01.csv' (HEADER, DELIMITER ',');\n",
     "\"\"\"\n",
+    "con.sql(sql)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "┌──────────┬────────────┬────────────────────┬───┬────────────────────┬────────────────────┬────────────────────┐\n",
+       "│ deviceId │     ts     │         A1         │ … │        A98         │        A99         │        A100        │\n",
+       "│  int64   │   int64    │       double       │   │       double       │       double       │       double       │\n",
+       "├──────────┼────────────┼────────────────────┼───┼────────────────────┼────────────────────┼────────────────────┤\n",
+       "│    10000 │ 1723815869 │ 1867.4813422008917 │ … │  5335.437902726459 │  6808.325712287124 │  4794.341745039001 │\n",
+       "│     5227 │ 1723815869 │ 3448.4288819463827 │ … │  3323.459555203496 │  9351.934126231452 │  7817.012990315286 │\n",
+       "│     8544 │ 1723815869 │   4792.52266958132 │ … │ 7143.6745891260125 │  4799.109156520297 │  7639.871029532273 │\n",
+       "│     9356 │ 1723815869 │  4241.034492270514 │ … │  1597.624361294262 │  2383.955978779271 │   550.071942835264 │\n",
+       "│     3391 │ 1723815869 │ 2763.4221857490725 │ … │  7178.480185811178 │ 1080.1904863830935 │ 2547.9371998087063 │\n",
+       "│     5601 │ 1723815869 │ 439.69711197081705 │ … │  4373.593377774795 │  6905.423013553151 │  690.0851078600779 │\n",
+       "│     1014 │ 1723815869 │   8506.33869069701 │ … │  2007.865594861804 │  8733.016956992677 │ 330.78578017396995 │\n",
+       "│     7397 │ 1723815869 │  4627.632960880095 │ … │  8700.186542211783 │ 452.48182648247035 │  8171.671066225217 │\n",
+       "│     5578 │ 1723815869 │  9292.865795792197 │ … │  594.0599730712415 │  708.6142001735918 │   9293.75656564403 │\n",
+       "│     8700 │ 1723815869 │   5732.48876414905 │ … │  4586.482215518376 │  8748.121585097051 │ 1201.2882333248697 │\n",
+       "│       ·  │      ·     │           ·        │ · │          ·         │          ·         │          ·         │\n",
+       "│       ·  │      ·     │           ·        │ · │          ·         │          ·         │          ·         │\n",
+       "│       ·  │      ·     │           ·        │ · │          ·         │          ·         │          ·         │\n",
+       "│     9989 │ 1723815869 │  8120.654659970522 │ … │  3710.627603694585 │  8028.038848673268 │  5370.447778031146 │\n",
+       "│     4370 │ 1723815869 │  6930.916973704147 │ … │  5503.870665146621 │  9449.458667536572 │ 2797.6445746839363 │\n",
+       "│     6488 │ 1723815869 │  3300.258752719191 │ … │  4291.406675706378 │  3909.069328925041 │  7913.921156419481 │\n",
+       "│     1668 │ 1723815869 │  4426.170658253802 │ … │  8530.941394961354 │ 3563.7747276496166 │ 2465.1215105901115 │\n",
+       "│     7968 │ 1723815869 │  8902.810829176375 │ … │  6931.066692521457 │  9181.890964189142 │  5782.779505387338 │\n",
+       "│     2609 │ 1723815869 │  5310.038873636044 │ … │  6725.232227391897 │ 2856.0816129939326 │  4769.817027133583 │\n",
+       "│     2864 │ 1723815869 │  6937.518659772167 │ … │  6243.151897036262 │   9418.26816082694 │ 2320.2643401276555 │\n",
+       "│     1637 │ 1723815869 │  8928.747306924288 │ … │  5239.621133282603 │  7186.425808869662 │ 8187.6906811874605 │\n",
+       "│     7065 │ 1723815869 │ 2636.4435805664275 │ … │  5931.346542516985 │   6630.80674179841 │ 3451.2453966139324 │\n",
+       "│     2053 │ 1723815869 │ 3252.0732042976497 │ … │  8400.051156511101 │ 1005.5487656639317 │ 3207.7437966552648 │\n",
+       "├──────────┴────────────┴────────────────────┴───┴────────────────────┴────────────────────┴────────────────────┤\n",
+       "│ 100 rows (20 shown)                                                                     102 columns (6 shown) │\n",
+       "└───────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sql = \"SELECT deviceId, ts, UNNEST(metrics) FROM './io_test_data_compact.json'\"\n",
     "con.sql(sql)"
    ]
   }
