--- a/01.data-prepare.ipynb
+++ b/01.data-prepare.ipynb
@@ -2,22 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Current datetime:  2024-08-09 10:25:32.437961\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import json\n",
     "import random\n",
     "\n",
-    "from datetime import datetime\n",
+    "from datetime import datetime\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "curr_dt = datetime.now()\n",
     "print(\"Current datetime: \", curr_dt)\n",
     "timestamp = int(round(curr_dt.timestamp()))\n",
@@ -40,7 +40,7 @@
     "    }))\n",
     "\n",
     "with open(\"./io_test_data.json\", \"w\") as f:\n",
-    "    f.write(\"\\n\".join(rows))\n"
+    "    f.write(\"\\n\".join(rows))"
    ]
   },
   {
@@ -86,10 +86,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Current datetime:  2024-08-16 21:44:28.544730\n"
+     ]
+    }
+   ],
+   "source": [
+    "curr_dt = datetime.now()\n",
+    "print(\"Current datetime: \", curr_dt)\n",
+    "timestamp = int(round(curr_dt.timestamp()))\n",
+    "\n",
+    "rows = []\n",
+    "\n",
+    "for k in range(100):\n",
+    "    metrics = {}\n",
+    "    for index in range(1, 101):\n",
+    "        metrics[f'A{index}'] = random.random() * 10000\n",
+    "\n",
+    "    rows.append(json.dumps({\n",
+    "        \"deviceId\":  random.randint(1000, 10000),\n",
+    "        \"ts\": timestamp,\n",
+    "        \"metrics\": metrics\n",
+    "    }))\n",
+    "\n",
+    "with open(\"./io_test_data_compact.json\", \"w\") as f:\n",
+    "    f.write(\"\\n\".join(rows))"
+   ]
   }
  ],
  "metadata": {
